[DOMJIT][DFG] CallDOM never writes Stack https://bugs.webkit.org/show_bug.cgi?id=163926

Reviewed by Filip Pizlo and Saam Barati.

There is no way to write(Stack) in CallDOM.
This worst case (the most clobbering case) scenario
should be aligned to the one of Call, read(World) and write(Heap).

* dfg/DFGClobberize.h:
(JSC::DFG::clobberize):

Canonical link: https://commits.webkit.org/181650@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207789 268f45cc-cd09-0410-ab3c-d52691b4dbfc